# VSS-Vision

./: .INSTALL.md.swp  .cproject  .gitignore  .gitmodules  .project  .travis.yml  ABOUT.md  CMakeLists.txt  Constants.h  Core.cpp  Core.h  GUI.cpp  GUI.h  INSTALL.md  INSTALL.md~  Main.cpp  Makefile  README.md  Robot.cpp  Robot.h  VSS-VISION  VSS-Vision  Vision.cpp  Vision.h  cameraConfig.sh  configure.sh  configure_with_tests.sh  eclipse-proj.xml  entrypoint.sh  install_core.sh
Calibration/: Calibration  Calibration.cpp  Calibration.h  Headers.h  Main.cpp  Makefile  calibration.make
Data/Draw/: blueRGB.csv  brownRGB.csv  greenRGB.csv  pinkRGB.csv  purpleRGB.csv
Data/Teams/: SIR2016.csv  teste.csv  teste2_2016.csv
Data/Vision/: brownHSV.csv  greenHSV.csv  orangeHSV.csv  purpleHSV.csv  redHSV.csv  yellowHSV.csv
Utils/CRUD/: CRUD.cpp  CRUD.h
Utils/Commons/: Commons.cpp  Commons.h
Utils/Draw/: Draw.cpp  Draw.h
Utils/Imgui/: imgui_impl_glfw.cpp
Utils/Zocket/: Zocket.cpp  Zocket.h
Utils/interface/: interface.cpp  interface.h
data/: calibration1.txt  default.txt  main.db  main.sql  teste.txt  teste3.txt
doc/: Doxyfile  Doxygen
doc/html/: CRUD_8h_source.html  Commons_8h_source.html  Constants_8h_source.html  Core_8h_source.html  Draw_8h_source.html  GUI_8h_source.html  QtOpenCV_8h_source.html  Robot_8h_source.html  Vision_8h_source.html  annotated.html  btVector3_8h_source.html  calibration_8h_source.html  classCRUD-members.html  classCRUD.html  classCore-members.html  classCore.html  classCore__coll__graph.map  classCore__coll__graph.md5  classDraw-members.html  classDraw.html  classDraw__coll__graph.dot  classDraw__coll__graph.map  classDraw__coll__graph.md5  classGUI-members.html  classGUI.html  classGUI__coll__graph.map  classGUI__coll__graph.md5  classImVector-members.html  classImVector.html  classImVector__coll__graph.dot  classImVector__coll__graph.md5  classInterface-members.html  classInterface.html  classInterface__coll__graph.map  classInterface__coll__graph.md5  classLinearMath.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  (+288 more)
doc/latex/: annotated.tex  classInterface.tex  classInterface__coll__graph.md5  classMainWindow.tex  classMainWindow__coll__graph.md5  classQCustomLabel.tex  classQCustomLabel__inherit__graph.md5  classSQLite.tex  classcalibration.tex  classcalibration__coll__graph.md5  classcalibration__inherit__graph.md5  classvision.tex  classvision__coll__graph.md5  classvision__inherit__graph.md5  classvss__command_1_1Global__Commands.tex  classvss__command_1_1Global__Commands__inherit__graph.md5  classvss__command_1_1Robot__Command.tex  classvss__command_1_1Robot__Command__coll__graph.md5  classvss__state_1_1Ball__State.tex  classvss__state_1_1Ball__State__coll__graph.md5  classvss__state_1_1Ball__State__inherit__graph.md5  classvss__state_1_1Global__State.tex  classvss__state_1_1Global__State__coll__graph.md5  classvss__state_1_1Global__State__inherit__graph.md5  classvss__state_1_1Pose.tex  classvss__state_1_1Pose__inherit__graph.md5  classvss__state_1_1RGB.tex  classvss__state_1_1RGB__coll__graph.md5  classvss__state_1_1RGB__inherit__graph.md5  classvss__state_1_1Robot__State.tex  classvss__state_1_1Robot__State__coll__graph.md5  classvss__state_1_1Robot__State__inherit__graph.md5  dir_11dd7fad4ed08da263e0728e56584262.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  hierarchy.tex  namespacecommon.tex  namespaces.tex  refman.aux  refman.idx  (+17 more)
glade/: #mainwindow.glade#  Calibration.glade  Calibration.glade~  GProgram.glade  Game.glade  Menu.glade  Menu.glade~  Vision.glade  Vision.glade~  Vision1.glade~  mainwindow.glade  mainwindow.glade~
include/: BallKalmanFIlter.h  CalibrationRoutine.h  CalibrationWindow.h  CameraCalibration.h  CameraReader.h  ColorRecognizer.h  ColorRecognizerTwoColors.h  GImage.h  GProgram.h  ImageFileReader.h  KalmanFilter.h  PatternRecognizer.h  RobotOpponentKalmanFilter.h  RobotRecognizer.h  RobotRecognizerTwoColors.h  RobotTeamKalmanFilter.h  StateSenderAdapter.h  mainwindow.h  mainwindowdraw.h  myarea.h
include/Builders/: CalibrationBuilder.h  GameBuilder.h
include/Core/: DirectoryHelper.h  FrameHelper.h  StringHelper.h
include/Domain/: Calibration.h  ColorPattern.h  ColorPosition.h  ColorRange.h  ColorSide.h  ColorSpace.h  ColorType.h  ConfigurationType.h  CutType.h  Game.h  ObjectType.h  Point2d.h  ProgramState.h  WhoseColor.h  WhoseName.h
include/Factories/: CalibrationFactory.h
include/Helpers/: DefaultFilesPath.h  FrameHelper.h  Math.h  RobotHelper.h  TimeHelper.h
include/Interfaces/: IBallKalmanFilter.h  ICalibrationBuilder.h  ICalibrationFactory.h  ICalibrationRepository.h  ICalibrationRoutine.h  ICalibrationWindow.h  ICameraHandler.h  ICameraReader.h  IColorRecognizer.h  IColorRecognizerOptimized.h  IGProgram.h  IGameBuilder.h  IGameRepository.h  IImageInputReader.h  IInputReader.h  IMenuWindow.h  IPatternRecognizer.h  IRobotOpponentKalmanFilter.h  IRobotRecognizer.h  IRobotTeamKalmanFilter.h  IStateSenderAdapter.h  IVisionWindow.h  IWindowControl.h
include/Repositories/: CalibrationRepository.h  GameRepository.h
mock/: cameraCoefficients.xml
src/: BallKalmanFIlter.cpp  BallKalmanFilter.cpp  CalibrationRoutine.cpp  CalibrationWindow.cpp  CameraCalibration.cpp  CameraReader.cpp  ColorRecognizer.cpp  ColorRecognizerTwoColors.cpp  GImage.cpp  GProgram.cpp  ImageFileReader.cpp  KalmanFilter.cpp  Makefile  Menu.glade  PatternRecognizer.cpp  QtOpenCV.cpp  QtProject2.pro  QtProject2.pro.user.18  QtProject2.pro.user.3.2-pre1  QtProject2.pro.user.ccdd1ad  QtProject2.pro.user.ce03d53  RobotOpponentKalmanFilter.cpp  RobotRecognizer.cpp  RobotRecognizerTwoColors.cpp  RobotTeamKalmanFIlter.cpp  StateSenderAdapter.cpp  calibration.cpp  calibration.h  common.cpp  common.h  interface.cpp  interface.h  kalman.cpp  kalman.h  main.cpp  mainwindow.cpp  mainwindow.glade  mainwindow.h  mainwindow.ui  mainwindowdraw.cpp  (+17 more)
test/: CameraReaderTests.cpp  ColorRecognizerTests.cpp  MainTests.cpp
(+180 files in other folders)
